--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -23,6 +23,7 @@
 	- 2.cam-P20-6,音频jy20231019-1-43
 	- 3.cam-P21-7,音频jy20231019-1-45
 	- 4.cam-P23-11音频jy20231019-1-51
+	- 讲义电子版存于家网盘/补习班作业/20231019
 - [ ] 指读绘本。
 	- raz-P11-bird goes home
 	- raz-P68-building with blocks
