--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -7,7 +7,7 @@
 1、棋子的强弱，
 2、老鼠偷油。
 ### 作业：
-- [ ] 10级题目，手筋。
+- [ ] 10级题目，[[notes/手筋\|手筋]]。
 - [ ] 每周对局。
 ## 英语
 温馨提示
@@ -20,6 +20,7 @@
 - [ ] 并指读讲义
 	- 老师发的单子Unit 3，已标10.19-1、2、3、4
 	- 1.cam-P20-5,音频jy20231019-1-42
+		- C1 2023-10-19-Thu
 	- 2.cam-P20-6,音频jy20231019-1-43
 	- 3.cam-P21-7,音频jy20231019-1-45
 	- 4.cam-P23-11音频jy20231019-1-51
@@ -29,3 +30,12 @@
 	- raz-P68-building with blocks
 	- raz-P37-car parts
 	- 音频raz20231019
+	- C1 2023-10-19-Thu
+## 书法
+今天复习了之前学习的“正捺、平捺”两个笔画，并且重新讲解了“人、文”两个字。
+新学习了汉字“走、八、入、足”四个字。
+- [ ] 作业是“文、走、足”三个字各两行
+- [ ] “人、八、入”三个字各一行～
+	写作业是注意⚠️
+	1、分清楚“人、八、入”三个字！
+	2、“走、足”两个字的“平捺”一定要往下走，不要太平～
