--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -22,6 +22,7 @@
 	- 1.cam-P20-5,音频jy20231019-1-42
 		- C1 2023-10-19-Thu
 	- 2.cam-P20-6,音频jy20231019-1-43
+		- C1 2023-10-20-Fri
 	- 3.cam-P21-7,音频jy20231019-1-45
 	- 4.cam-P23-11音频jy20231019-1-51
 	- 讲义电子版存于家网盘/补习班作业/20231019
@@ -31,6 +32,7 @@
 	- raz-P37-car parts
 	- 音频raz20231019
 		- C1 2023-10-19-Thu
+		- C2 2023-10-20-Fri
 ## 书法
 今天复习了之前学习的“正捺、平捺”两个笔画，并且重新讲解了“人、文”两个字。
 新学习了汉字“走、八、入、足”四个字。
