--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -8,7 +8,9 @@
 2、老鼠偷油。
 ### 作业：
 - [ ] 10级题目，[[notes/手筋\|手筋]]。
+	- 2023-10-21-Sat六题
 - [ ] 每周对局。
+	- 2023-10-21-Sat一局
 ## 英语
 温馨提示
 - [ ] 本周我们学习了四个方位词，上面（on）,里面（in）,旁边（next to）,下面（under）,请宝贝们熟练这四个方位词。
@@ -41,3 +43,6 @@
 	写作业是注意⚠️
 	1、分清楚“人、八、入”三个字！
 	2、“走、足”两个字的“平捺”一定要往下走，不要太平～
+## 古筝
+- [ ] 练琴
+	- 2023-10-21-Sat 练习1
