--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -19,6 +19,7 @@
 	- P20-6,无音频，找不同
 	- P21-7,音频act20231019-1-47
 	- P22-9,音频act20231019-1-50
+	- 2023-10-21-Sat全部完成
 - [ ] 并指读讲义
 	- 老师发的单子Unit 3，已标10.19-1、2、3、4
 	- 1.cam-P20-5,音频jy20231019-1-42
@@ -35,14 +36,16 @@
 	- 音频raz20231019
 		- C1 2023-10-19-Thu
 		- C2 2023-10-20-Fri
+		- C3 2023-10-21-Sat
 ## 书法
 今天复习了之前学习的“正捺、平捺”两个笔画，并且重新讲解了“人、文”两个字。
 新学习了汉字“走、八、入、足”四个字。
 - [ ] 作业是“文、走、足”三个字各两行
+	- 2023-10-21-Sat完成
 - [ ] “人、八、入”三个字各一行～
 	写作业是注意⚠️
 	1、分清楚“人、八、入”三个字！
 	2、“走、足”两个字的“平捺”一定要往下走，不要太平～
 ## 古筝
 - [ ] 练琴
-	- 2023-10-21-Sat 练习1
+	- 2023-10-21-Sat 练习1次
