--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -13,21 +13,23 @@
 	- 2023-10-21-Sat一局
 ## 英语
 温馨提示
-- [ ] 本周我们学习了四个方位词，上面（on）,里面（in）,旁边（next to）,下面（under）,请宝贝们熟练这四个方位词。
-- [ ] 完成练习册P20，5，6；P21，7；P22，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
+- [x] 本周我们学习了四个方位词，上面（on）,里面（in）,旁边（next to）,下面（under）,请宝贝们熟练这四个方位词。
+- [x] 完成练习册P20，5，6；P21，7；P22，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
 	- P20-5,音频act20231019-1-44
 	- P20-6,无音频，找不同
 	- P21-7,音频act20231019-1-47
 	- P22-9,音频act20231019-1-50
 	- 2023-10-21-Sat全部完成
-- [ ] 并指读讲义
+- [x] 并指读讲义
 	- 老师发的单子Unit 3，已标10.19-1、2、3、4
 	- 1.cam-P20-5,音频jy20231019-1-42
 		- C1 2023-10-19-Thu
 	- 2.cam-P20-6,音频jy20231019-1-43
 		- C1 2023-10-20-Fri
 	- 3.cam-P21-7,音频jy20231019-1-45
+		- C1 2023-10-22-Sun
 	- 4.cam-P23-11音频jy20231019-1-51
+		- C1 2023-10-22-Sun
 	- 讲义电子版存于家网盘/补习班作业/20231019
 - [ ] 指读绘本。
 	- raz-P11-bird goes home
@@ -37,15 +39,17 @@
 		- C1 2023-10-19-Thu
 		- C2 2023-10-20-Fri
 		- C3 2023-10-21-Sat
+		- C4 2023-10-22-Sun
 ## 书法
 今天复习了之前学习的“正捺、平捺”两个笔画，并且重新讲解了“人、文”两个字。
 新学习了汉字“走、八、入、足”四个字。
-- [ ] 作业是“文、走、足”三个字各两行
+- [x] 作业是“文、走、足”三个字各两行
 	- 2023-10-21-Sat完成
-- [ ] “人、八、入”三个字各一行～
+- [x] “人、八、入”三个字各一行～
 	写作业是注意⚠️
 	1、分清楚“人、八、入”三个字！
 	2、“走、足”两个字的“平捺”一定要往下走，不要太平～
+	- 2023-10-22-Sun完成
 ## 古筝
 - [ ] 练琴
 	- 2023-10-21-Sat 练习1次
