--- a/src/site/notes/notes/20231016周.md
+++ b/src/site/notes/notes/20231016周.md
@@ -31,7 +31,7 @@
 	- 4.cam-P23-11音频jy20231019-1-51
 		- C1 2023-10-22-Sun
 	- 讲义电子版存于家网盘/补习班作业/20231019
-- [ ] 指读绘本。
+- [x] 指读绘本。 [completion:: 2023-10-23]
 	- raz-P11-bird goes home
 	- raz-P68-building with blocks
 	- raz-P37-car parts
@@ -40,6 +40,8 @@
 		- C2 2023-10-20-Fri
 		- C3 2023-10-21-Sat
 		- C4 2023-10-22-Sun
+		- C5 2023-10-23-Mon
+		- C6 2023-10-24-Tue
 ## 书法
 今天复习了之前学习的“正捺、平捺”两个笔画，并且重新讲解了“人、文”两个字。
 新学习了汉字“走、八、入、足”四个字。
