--- a/src/site/notes/notes/20231023周.md
+++ b/src/site/notes/notes/20231023周.md
@@ -20,3 +20,9 @@
 	- 写作业时注意⚠️
 	- 1、分清楚“中、禾、川”三个字对应的竖是什么竖！
 	- 2、“中”字的“口”一定要扁平！
+## 英语
+- [ ] 指读绘本2023-10-27-Fri下发
+	- raz-P67 clean not clean
+	- raz-P84 dad and i
+	- raz-P85 for mom
+	- raz-P59 Carlos goes to school
