--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -1,1 +1,38 @@
-`= this.file.mtime`
+---
+{"dg-publish":true,"permalink":"/notes/202310311910校内任务/"}
+---
+
+
+
+## 持续任务
+### 语文
+#### 2023-10-12-Thu通知
+
+<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
+
+
+
+3️⃣以下为一年级国家体质测试内容和标准，请大家知晓。[[notes/一年级国家体质测试内容和标准2023\|链接]] 
+
+</div></div>
+
+#### 2023-10-26-Thu微信群通知
+
+<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
+
+
+
+我校将在11月举办科技节活动，一年级有两个项目可以参加。并且跟综合课的上课内容也比较符合。孩子要是感兴趣，可以参与一下。 
+
+</div></div>
+
+## 本期任务
+### 英语
+#### 2023-10-31-Tue微信群通知
+【今日英语学习小提示】
+今天我们在课堂中跟随动物朋友的脚步走进了他们的课堂，海豚老师为大家介绍了丰富多彩的动物，你还记得他们吗？为什么最后大家都跑掉了呢？
+1. 孩子们在家可以大声指读26-27页的故事，能表演的同学也可以展示你丰富的演技，把这些精彩时刻记录下来吧（上传班小二）
+2. 请你把我们最近学过的动物都大声地介绍给爸爸妈妈听吧！
+3. 今天没有到校的小朋友，可以点击下面网址去认识更多的动物https://basic.smartedu.cn/syncClassroom/classActivity?activityId=4351f9b8-8a2d-49bc-9ba2-a941e5905a37 
+
+孩子们有任何问题可以随时联系我，孩子们加油
