--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -14,3 +14,14 @@
 ## 古筝
 - [ ] 练琴
 	- 2023-10-30-Mon 一次
+	- 2023-11-01-Wed一次
+## 书法
+今天复习了之前学习的“工、禾、中、川”四个字，并根据作业情侣将“占、申”重新进行了讲解。
+学习了“横折”这个新笔画，学习了汉字“口、田”。
+- [ ] 作业：占、申、口、田 各两行。
+## 英语
+温馨提示
+- [ ] 本周我们学习了6个家庭成员，father,mother,grandfather,grandmother, brother,sister,下周进行词汇拼读考察，大家在家每个字每天写两遍，帮助记忆。
+- [ ] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
+- [ ] 3：并指读讲义1，3，10
+- [ ] 指读绘本。
