--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -6,7 +6,7 @@
 ### 本周内容：
 1. 围空对局。
 2. 生命线，三四线。
-3. 金角银边草肚皮。
+3. [[notes/金角银边草肚皮\|金角银边草肚皮]]。
 ### 作业：
 - [ ] 10级题目
 - [ ] 每周对局。
@@ -23,5 +23,19 @@
 温馨提示
 - [ ] 本周我们学习了6个家庭成员，father,mother,grandfather,grandmother, brother,sister,下周进行词汇拼读考察，大家在家每个字每天写两遍，帮助记忆。
 - [ ] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
+	- Activity book
+		- P24-2,听单act1030:2-04
+		- P25-5,听单act1030:2-10
+		- P28-9,听单act1030:2-17
 - [ ] 3：并指读讲义1，3，10
+	- Pupil's book
+		- 讲义1：P24-1,听单pup1030:2-02
+		- 讲义3：P25-3,听单pup1030:2-05
+		- 讲义10：P29-11,听单pup1030:2-18
 - [ ] 指读绘本。
+	- raz book
+		- P29,going places,听单raz1030:24
+		- P38,fun in the water,听单raz1030:21
+		- P56,go fly a kite,听单raz1030:23
+		- P61,getting dressed,听单raz1030:22
+		- P88,grandparents are great,听单raz1030:25
