--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -36,3 +36,4 @@
 3. 今天没有到校的小朋友，可以点击下面网址去认识更多的动物https://basic.smartedu.cn/syncClassroom/classActivity?activityId=4351f9b8-8a2d-49bc-9ba2-a941e5905a37 
 
 孩子们有任何问题可以随时联系我，孩子们加油
+- 2023-10-31-Tus完成
