--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -23,6 +23,7 @@
 温馨提示
 - [ ] 本周我们学习了6个家庭成员，father,mother,grandfather,grandmother, brother,sister,下周进行词汇拼读考察，大家在家每个字每天写两遍，帮助记忆。
 	- C1 2023-11-02-Thu
+	- C2 2023-11-03-Fri
 - [ ] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
 	- Activity book
 		- P24-2,听单act1030:2-04
@@ -41,3 +42,4 @@
 		- P61,getting dressed,听单raz1030:22
 		- P88,grandparents are great,听单raz1030:25
 	- C1 2023-11-02-Thu
+	- C2 2023-11-03-Fri
