--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -37,3 +37,19 @@
 
 孩子们有任何问题可以随时联系我，孩子们加油
 - 2023-10-31-Tus完成
+#### 2023-11-02-Thu小程序布置打卡
+课文朗读打卡:
+各位大朋友小朋友们：
+      英语朗读是一种生动、立体的阅读方式，可以把我们的所有感官体验，把最饱满、最激情的感情全部调动出来；长期坚持朗读，就能养成眼到、口到、耳到、心到的良好的朗读习惯，让自己真正地开口说英语！
+为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
+坚持下去，一定会看到自己的蜕变！
+You can do it!
+- [ ] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]
+- [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-02]
+#### 2023-11-03-Fri微信通知
+【今日英语学习小提示】
+今天我们在课堂中认识了海洋和天空中的动物，并且通过clouds的绘本看到了不同形状的云彩[Party]
+① 孩子们在家可以利用Clouds绘本磨耳朵，大声朗读，看一看小男孩都看到了什么形状的云彩吧！（自愿上传班小二）
+② 请你发挥想象力，利用纸巾、彩纸、棉花、毛线等等材料创造你想象中的云彩吧！记得把它的名字写在横线上！
+③ 今天没有到校的小朋友，可以点击下面视频去看一看神奇的云彩吧！孩子们有任何问题可以随时联系我，孩子们加油[Sun]
+- 资源在家盘校内20231103英语
