--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -29,6 +29,7 @@
 		- P24-2,听单act1030:2-04
 		- P25-5,听单act1030:2-10
 		- P28-9,听单act1030:2-17
+	- 2023-11-04-Sat完成
 - [ ] 3：并指读讲义1，3，10
 	- Pupil's book
 		- 讲义1：P24-1,听单pup1030:2-02
