--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -44,7 +44,8 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it!
-- [ ] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]
+- [ ] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-04]
+- [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-04]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-02]
 #### 2023-11-03-Fri微信通知
 【今日英语学习小提示】
@@ -53,3 +54,4 @@ You can do it!
 ② 请你发挥想象力，利用纸巾、彩纸、棉花、毛线等等材料创造你想象中的云彩吧！记得把它的名字写在横线上！
 ③ 今天没有到校的小朋友，可以点击下面视频去看一看神奇的云彩吧！孩子们有任何问题可以随时联系我，孩子们加油[Sun]
 - 资源在家盘校内20231103英语
+- 1.2023-11-04-Sat完成
