--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -19,11 +19,13 @@
 今天复习了之前学习的“工、禾、中、川”四个字，并根据作业情侣将“占、申”重新进行了讲解。
 学习了“横折”这个新笔画，学习了汉字“口、田”。
 - [ ] 作业：占、申、口、田 各两行。
+	- 2023-11-04-Sat完成
 ## 英语
 温馨提示
 - [ ] 本周我们学习了6个家庭成员，father,mother,grandfather,grandmother, brother,sister,下周进行词汇拼读考察，大家在家每个字每天写两遍，帮助记忆。
 	- C1 2023-11-02-Thu
 	- C2 2023-11-03-Fri
+	- C3 2023-11-04-Sat
 - [ ] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
 	- Activity book
 		- P24-2,听单act1030:2-04
@@ -33,7 +35,9 @@
 - [ ] 3：并指读讲义1，3，10
 	- Pupil's book
 		- 讲义1：P24-1,听单pup1030:2-02
+			- 2023-11-04-Sat完成
 		- 讲义3：P25-3,听单pup1030:2-05
+			- 2023-11-04-Sat完成
 		- 讲义10：P29-11,听单pup1030:2-18
 - [ ] 指读绘本。
 	- raz book
@@ -44,3 +48,4 @@
 		- P88,grandparents are great,听单raz1030:25
 	- C1 2023-11-02-Thu
 	- C2 2023-11-03-Fri
+	- C3 2023-11-04-Sat
