--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -9,8 +9,10 @@
 3. [[notes/金角银边草肚皮\|金角银边草肚皮]]。
 ### 作业：
 - [ ] 10级题目
+	- 2023-11-05-Sun五题
 - [ ] 每周对局。
 	- 15级的同学就可以下围空对局了。没有达到15级的同学，还需要升级，到15级后，才可以下围空对局。
+	- 2023-11-05-Sun一局
 ## 古筝
 - [ ] 练琴
 	- 2023-10-30-Mon 一次
@@ -18,7 +20,7 @@
 ## 书法
 今天复习了之前学习的“工、禾、中、川”四个字，并根据作业情侣将“占、申”重新进行了讲解。
 学习了“横折”这个新笔画，学习了汉字“口、田”。
-- [ ] 作业：占、申、口、田 各两行。
+- [x] 作业：占、申、口、田 各两行。
 	- 2023-11-04-Sat完成
 ## 英语
 温馨提示
@@ -26,7 +28,7 @@
 	- C1 2023-11-02-Thu
 	- C2 2023-11-03-Fri
 	- C3 2023-11-04-Sat
-- [ ] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
+- [x] 2：完成练习册P24，2；P26，5，6；P27；P28，9；（练习册上的听力可喜马拉雅搜索KID's Box ,根据题目旁边的数字寻找）
 	- Activity book
 		- P24-2,听单act1030:2-04
 		- P25-5,听单act1030:2-10
