--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -55,3 +55,4 @@ You can do it!
 ③ 今天没有到校的小朋友，可以点击下面视频去看一看神奇的云彩吧！孩子们有任何问题可以随时联系我，孩子们加油[Sun]
 - 资源在家盘校内20231103英语
 - 1.2023-11-04-Sat完成
+- 2.2023-11-05-Sun完成
