--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -34,13 +34,14 @@
 		- P25-5,听单act1030:2-10
 		- P28-9,听单act1030:2-17
 	- 2023-11-04-Sat完成
-- [ ] 3：并指读讲义1，3，10
+- [x] 3：并指读讲义1，3，10
 	- Pupil's book
 		- 讲义1：P24-1,听单pup1030:2-02
 			- 2023-11-04-Sat完成
 		- 讲义3：P25-3,听单pup1030:2-05
 			- 2023-11-04-Sat完成
 		- 讲义10：P29-11,听单pup1030:2-18
+			- 2023-11-05-Sun完成
 - [ ] 指读绘本。
 	- raz book
 		- P29,going places,听单raz1030:24
@@ -51,3 +52,4 @@
 	- C1 2023-11-02-Thu
 	- C2 2023-11-03-Fri
 	- C3 2023-11-04-Sat
+	- C4 2023-11-05-Sun
