--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -17,6 +17,7 @@
 - [ ] 练琴
 	- 2023-10-30-Mon 一次
 	- 2023-11-01-Wed一次
+	- 2023-11-05-Sun一次
 ## 书法
 今天复习了之前学习的“工、禾、中、川”四个字，并根据作业情侣将“占、申”重新进行了讲解。
 学习了“横折”这个新笔画，学习了汉字“口、田”。
