--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -43,7 +43,7 @@
 			- 2023-11-04-Sat完成
 		- 讲义10：P29-11,听单pup1030:2-18
 			- 2023-11-05-Sun完成
-- [ ] 指读绘本。
+- [x] 指读绘本。 [completion:: 2023-11-06]
 	- raz book
 		- P29,going places,听单raz1030:24
 		- P38,fun in the water,听单raz1030:21
@@ -54,3 +54,4 @@
 	- C2 2023-11-03-Fri
 	- C3 2023-11-04-Sat
 	- C4 2023-11-05-Sun
+	- C5 2023-11-06-Mon
