--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -44,7 +44,9 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it!
-- [ ] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-04]
+- [ ] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-06]
+- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-05]  [completion:: 2023-11-06]
+- [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-04]  [completion:: 2023-11-05]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-04]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-02]
 #### 2023-11-03-Fri微信通知
