--- a/src/site/notes/notes/20231030周.md
+++ b/src/site/notes/notes/20231030周.md
@@ -4,10 +4,16 @@
 
 ## 围棋
 ### 本周内容：
+{ #083acd}
+
+
 1. 围空对局。
 2. 生命线，三四线。
 3. [[notes/金角银边草肚皮\|金角银边草肚皮]]。
 ### 作业：
+{ #8ce513}
+
+
 - [ ] 10级题目
 	- 2023-11-05-Sun五题
 - [ ] 每周对局。
