--- a/src/site/notes/notes/20231106周.md
+++ b/src/site/notes/notes/20231106周.md
@@ -7,6 +7,7 @@
 ## 英语
 ### 作业
 - [ ] 1：本周咱们学习了our pets,请将horse.mouse bird fish cat dog long short big small clean dirty每天写两遍，尽量边拼写边读[Rose]坚持5天
+	- C1 2023-11-08-Wed
 - [ ] 2：指读讲义1，2，5，6，11
 	- 讲义1，pup,P34-1,听单pup2-26
 	- 讲义2，pup,P34-2,听单pup2-27
@@ -18,6 +19,7 @@
 	- P36-6,听单act2-33
 	- P38-8,听单act2-38
 - [ ] 另外上周家庭成员单词拼写都不是很理想，需要本周继续复习，所以没有留绘本。英文学习需要日常积累，切不可三天打鱼两天晒网。良好的学习习惯需要家校配合共同养成[Rose][Rose]
+	- C1 2023-11-08-Wed
 ## 书法
 今天复习了之前学习的“口、田占、申”四个字，根据作业情况都进行了加强～
 学习了“横折钩、提”这两个新笔画，学习了汉字“司、内、习、刁”，回家请尝试写“同”字～
