--- a/src/site/notes/notes/202311071459校内任务.md
+++ b/src/site/notes/notes/202311071459校内任务.md
@@ -16,13 +16,37 @@
 
 </div></div>
 
+### 英语
+
+<div class="transclusion internal-embed is-loaded"><a class="markdown-embed-link" href="/notes/202310311910/#767ee4" aria-label="Open link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon lucide-link"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a><div class="markdown-embed">
+
+
+
+#### 2023-11-02-Thu小程序布置打卡
+
+</div></div>
+
+
+<div class="transclusion internal-embed is-loaded"><a class="markdown-embed-link" href="/notes/202310311910/#8eadcc" aria-label="Open link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon lucide-link"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a><div class="markdown-embed">
+
+
+
+课文朗读打卡:
+各位大朋友小朋友们：
+      英语朗读是一种生动、立体的阅读方式，可以把我们的所有感官体验，把最饱满、最激情的感情全部调动出来；长期坚持朗读，就能养成眼到、口到、耳到、心到的良好的朗读习惯，让自己真正地开口说英语！
+为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
+坚持下去，一定会看到自己的蜕变！
+You can do it! 
+
+</div></div>
+
 ## 本期任务
 ### 语文
 #### 2023-11-08-Wed通知
 @所有人
 各位家长、各位同学，大家好！2023年奔跑吧·少年线上跑及线上跳绳大赛活动火热进行中，这两项活动能使同学们运用科学实现健康与知识的完美融合。希望同学们能踊跃报名，积极参与，打开链接并注册，完成跑与跳的挑战。最后预祝同学们在此次活动中获得优异成绩。
-[跳绳大赛](https://mp.weixin.qq.com/s/PHueWmEC0mzKRZyq16aOyA)
-[奔跑大赛](https://mp.weixin.qq.com/s/OHOgZjMmk12T-6RyyW7_ZQ)
+[跳绳大赛链接](https://mp.weixin.qq.com/s/PHueWmEC0mzKRZyq16aOyA)
+[奔跑大赛链接](https://mp.weixin.qq.com/s/OHOgZjMmk12T-6RyyW7_ZQ)
 ### 英语
 #### 2023-11-08-Wed通知
 【今日英语学习小提示】
@@ -31,3 +55,4 @@
 ② 听读能力是小学低年级最重要的能力，我会不定时为孩子们推荐一些绘本，孩子们可以在家先听，感受语言的特点，听完之后可以尝试用无字版图书描述，坚持下来一定有很大的惊喜！[Heart]
 ③ 学有余力的小朋友可以根据自己的学习进度，听、读自己喜欢的内容
 It is never too late to start! 孩子们有任何问题可以随时联系我，加油加油[GoForIt]
+- 2023-11-08-Wed 完成
