--- a/src/site/notes/notes/20231106周.md
+++ b/src/site/notes/notes/20231106周.md
@@ -8,6 +8,7 @@
 ### 作业
 - [ ] 1：本周咱们学习了our pets,请将horse.mouse bird fish cat dog long short big small clean dirty每天写两遍，尽量边拼写边读[Rose]坚持5天
 	- C1 2023-11-08-Wed
+	- C2 2023-11-09-Thu
 - [ ] 2：指读讲义1，2，5，6，11
 	- 讲义1，pup,P34-1,听单pup2-26
 	- 讲义2，pup,P34-2,听单pup2-27
