--- a/src/site/notes/notes/202311071459校内任务.md
+++ b/src/site/notes/notes/202311071459校内任务.md
@@ -57,3 +57,11 @@ You can do it!
 ③ 学有余力的小朋友可以根据自己的学习进度，听、读自己喜欢的内容
 It is never too late to start! 孩子们有任何问题可以随时联系我，加油加油[GoForIt]
 - 2023-11-08-Wed 完成
+#### 2023-11-10-Fri通知
+2023.11.10周末英语练习:
+- [ ] 周末跟读第一单元故事，第二单元第一课歌谣和第二课对话（已添加至跟读任务）
+- [ ] 周末坚持听读绘本，先听至少五遍，再尝试把绘本中的图片描述出来吧！
+	- raz.bedtime counting,听单eng005
+	- raz.bird colors,听单eng007
+	- raz.go go go,听单eng023
+- [ ] 试着用划记法（或正字法）数一数家里一共有多少水果吧！（其他物品都可以）
