--- a/src/site/notes/notes/2023-11-14-Tue校内任务.md
+++ b/src/site/notes/notes/2023-11-14-Tue校内任务.md
@@ -94,6 +94,10 @@ You can do it!
 【11.15英语学习小提示】
 今天我们一起复习了Numbers单元的知识，学习了如何完成选择题和绘画题，同学们都很棒，要继续加油！
 ① 孩子们在家可以跟读有关颜色的对话，先听再读，模仿语音语调，已添加至跟读作业（自愿上传班小二）
+
 ② 继续坚持听读绘本、歌谣（今日推荐I See My Colours, 高频词歌谣2），利用绘本图片大声表达吧！期待大家的作品！
+
+ - 听单raz040
+
 ③ 今天没有到校的小朋友，可以点击下面音频，听一听都有哪些你熟悉的数字吧！
 孩子们有任何问题可以随时联系我，孩子们加油[Sun]
