--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -23,6 +23,8 @@ Have you got ....
 	- actP41-3,听单act2-45
 	- actP44-8,听单act2-52
 	- actP44-9,听单act2-53
+## 乐读
+- [ ] 加油站
 ## 书法
 今天复习了之前学习的“司、内、习、刁、同”五个字，根据作业情况都进行了加强～
 学习了“竖弯钩、竖勾”这两个新笔画，学习了汉字“无、光、巴、水、朵”五个对应的汉字。
