--- a/src/site/notes/notes/2023-11-14-Tue校内任务.md
+++ b/src/site/notes/notes/2023-11-14-Tue校内任务.md
@@ -3,9 +3,9 @@
 ---
 
 
-
+# 2023-11-14-Tue校内任务
 ## 持续任务
-# 语文
+### 语文
 #### 2023-10-12-Thu通知
 
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
