--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -3,7 +3,7 @@
 ---
 
 
-
+# 20231113周
 ## 英语
 【温馨提示】
 今天学习了句型： 
@@ -14,6 +14,7 @@ Have you got ....
 
 大家已经非常熟练本单元的句型I've got , Have you got .....
 - [ ] 阅读打卡单词拼读（给大家作业单的前六个身体单词），一定要是自己拼出来。尝试拼写。
+	- 2023-11-16-Thu 一次
 - [ ] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
 	- 讲义1，pupP40-1,听单pup2-40
 	- 讲义5，pupP42-5,听单pup2-46
@@ -25,6 +26,7 @@ Have you got ....
 	- actP44-9,听单act2-53
 ## 乐读
 - [ ] 加油站
+	- 2023-11-16-Thu完成上周
 ## 书法
 今天复习了之前学习的“司、内、习、刁、同”五个字，根据作业情况都进行了加强～
 学习了“竖弯钩、竖勾”这两个新笔画，学习了汉字“无、光、巴、水、朵”五个对应的汉字。
