--- a/src/site/notes/notes/2023-11-14-Tue校内任务.md
+++ b/src/site/notes/notes/2023-11-14-Tue校内任务.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/2023-11-14-Tue校内任务/"}
+{"dg-publish":true,"permalink":"/notes/2023-11-14-Tue校内任务/","title":"南戴河游玩"}
 ---
 
 
@@ -103,3 +103,15 @@ You can do it!
 
 ③ 今天没有到校的小朋友，可以点击下面音频，听一听都有哪些你熟悉的数字吧！
 孩子们有任何问题可以随时联系我，孩子们加油[Sun]
+
+#### 2023-11-17-Fri 通知
+【周末英语学习建议】
+- [ ] 跟读第二单元歌谣及对话，已添加至跟读作业（自愿上传班小二）
+- [ ] 坚持听读，周末推荐绘本已添加至班小二资源，期待大家的蜕变[Heart]
+	- I can
+	- Baby animals 
+	- Maria goes to school 
+- [ ] 复习歌谣The Chimney
+	- 已放至家网盘，[点击打开](http://192.168.1.1:5212/s/XYFL)
+
+孩子们有任何问题可以联系我，大家加油[Sun][Sun][Sun]
