--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -15,6 +15,7 @@ Have you got ....
 大家已经非常熟练本单元的句型I've got , Have you got .....
 - [ ] 阅读打卡单词拼读（给大家作业单的前六个身体单词），一定要是自己拼出来。尝试拼写。
 	- 2023-11-16-Thu 一次
+	- 2023-11-17-Fri 一次
 - [ ] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
 	- 讲义1，pupP40-1,听单pup2-40
 	- 讲义5，pupP42-5,听单pup2-46
