--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -16,9 +16,12 @@ Have you got ....
 - [ ] 阅读打卡单词拼读（给大家作业单的前六个身体单词），一定要是自己拼出来。尝试拼写。
 	- 2023-11-16-Thu 一次
 	- 2023-11-17-Fri 一次
+	- 2023-11-18-Sat 一次
 - [ ] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
 	- 讲义1，pupP40-1,听单pup2-40
+		- 2023-11-18-Sat 完成
 	- 讲义5，pupP42-5,听单pup2-46
+		- 2023-11-18-Sat 完成
 	- 讲义9，pupP45-11,听单pup2-54
 - [ ] 3：活动用书P40，1，2；P41，3，4；P42，6；P43，7；P44，8，9；
 	- actP40-1,听单act2-42
