--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -28,6 +28,7 @@ Have you got ....
 	- actP41-3,听单act2-45
 	- actP44-8,听单act2-52
 	- actP44-9,听单act2-53
+	- 2023-11-19-Sun 全部完成
 ## 乐读
 - [ ] 加油站
 	- 2023-11-16-Thu完成上周
