--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -17,13 +17,15 @@ Have you got ....
 	- 2023-11-16-Thu 一次
 	- 2023-11-17-Fri 一次
 	- 2023-11-18-Sat 一次
-- [ ] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
+	- 2023-11-19-Sun 一次
+- [x] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
 	- 讲义1，pupP40-1,听单pup2-40
 		- 2023-11-18-Sat 完成
 	- 讲义5，pupP42-5,听单pup2-46
 		- 2023-11-18-Sat 完成
 	- 讲义9，pupP45-11,听单pup2-54
-- [ ] 3：活动用书P40，1，2；P41，3，4；P42，6；P43，7；P44，8，9；
+		- 2023-11-19-Sun 完成
+- [x] 3：活动用书P40，1，2；P41，3，4；P42，6；P43，7；P44，8，9；
 	- actP40-1,听单act2-42
 	- actP41-3,听单act2-45
 	- actP44-8,听单act2-52
@@ -32,6 +34,7 @@ Have you got ....
 ## 乐读
 - [ ] 加油站
 	- 2023-11-16-Thu完成上周
+	- 2023-11-19-Sun 完成本周
 ## 书法
 今天复习了之前学习的“司、内、习、刁、同”五个字，根据作业情况都进行了加强～
 学习了“竖弯钩、竖勾”这两个新笔画，学习了汉字“无、光、巴、水、朵”五个对应的汉字。
