--- a/src/site/notes/notes/2023-11-14-Tue校内任务.md
+++ b/src/site/notes/notes/2023-11-14-Tue校内任务.md
@@ -106,13 +106,15 @@ You can do it!
 
 #### 2023-11-17-Fri 通知
 【周末英语学习建议】
-- [ ] 跟读第二单元歌谣及对话，已添加至跟读作业（自愿上传班小二）
+- [x] 跟读第二单元歌谣及对话，已添加至跟读作业（自愿上传班小二）
 	- 2023-11-18-Sat 完成
-- [ ] 坚持听读，周末推荐绘本已添加至班小二资源，期待大家的蜕变[Heart]
+- [x] 坚持听读，周末推荐绘本已添加至班小二资源，期待大家的蜕变[Heart]
 	- I can
+		- 2023-11-19-Sun 完成
 	- Baby animals 
 		- 2023-11-18-Sat 完成
 	- Maria goes to school 
+		- 2023-11-19-Sun 完成
 - [ ] 复习歌谣The Chimney
 	- 已放至家网盘，[点击打开](http://192.168.1.1:5212/s/XYFL)
 
