--- a/src/site/notes/notes/2023-11-20-Mon校外.md
+++ b/src/site/notes/notes/2023-11-20-Mon校外.md
@@ -7,6 +7,8 @@
 ## 英语
 宝贝们，温馨提示
 本周我们学习了野生动物，词汇共有12个，snake(蛇)giraffe(长颈鹿) elephant(大象)hippo(河马)monkey(猴子)crocodile(鳄鱼) arm(胳膊)leg(腿)foot(脚)，feet(脚复数 )tail(尾巴) hand(手)
+- 单词Pupils-P48,50有
+
 作业
 - [ ] 1：熟读以上词汇，每天每个写两遍[Rose]钉钉打卡5天
 - [ ] 2：老师发的讲义文件，要求先听后跟读，或者边听边指读。钉钉打卡5天
