--- a/src/site/notes/notes/2023-11-20-Mon校外.md
+++ b/src/site/notes/notes/2023-11-20-Mon校外.md
@@ -11,10 +11,12 @@
 
 作业
 - [ ] 1：熟读以上词汇，每天每个写两遍[Rose]钉钉打卡5天
+	- 2023-11-22-Wed 完成一次
 - [ ] 2：老师发的讲义文件，要求先听后跟读，或者边听边指读。钉钉打卡5天
 	1. pupP48-1,听单pup3-02
-	2. pupP50-5听单pup3-07
-	3. pupP53-11,听单pup3-14
+		- 2023-11-22-Wed 完成一次
+	1. pupP50-5听单pup3-07
+	2. pupP53-11,听单pup3-14
 
 - [ ] 3活动用书P49，3，4；P50，5，6；P51；P52，9；
 - [ ] 4：绘本可以根据自己时间自行选择RAZ每天打卡的内容[Rose]
@@ -24,6 +26,7 @@
 
 ## 古筝
 - [ ] 练琴
+	- 2023-11-22-Wed 一次
 ## 围棋
 ### 本周内容： 
 1. 围空
