--- a/src/site/notes/notes/20231113周.md
+++ b/src/site/notes/notes/20231113周.md
@@ -13,11 +13,12 @@ Have you got ....
 和关于身体部分的单词
 
 大家已经非常熟练本单元的句型I've got , Have you got .....
-- [ ] 阅读打卡单词拼读（给大家作业单的前六个身体单词），一定要是自己拼出来。尝试拼写。
+- [x] 阅读打卡单词拼读（给大家作业单的前六个身体单词），一定要是自己拼出来。尝试拼写。 [completion:: 2023-11-20]
 	- 2023-11-16-Thu 一次
 	- 2023-11-17-Fri 一次
 	- 2023-11-18-Sat 一次
 	- 2023-11-19-Sun 一次
+	- 2023-11-20-Mon 一次
 - [x] 阅读打卡故事。（指读讲义文本1，5，9。喜马拉雅搜KID's box  1 CD2 40,46,54）
 	- 讲义1，pupP40-1,听单pup2-40
 		- 2023-11-18-Sat 完成
@@ -32,7 +33,7 @@ Have you got ....
 	- actP44-9,听单act2-53
 	- 2023-11-19-Sun 全部完成
 ## 乐读
-- [ ] 加油站
+- [x] 加油站 [completion:: 2023-11-20]
 	- 2023-11-16-Thu完成上周
 	- 2023-11-19-Sun 完成本周
 ## 书法
@@ -42,6 +43,7 @@ Have you got ....
 - [ ] 无、光、巴、水、朵 5个字各两行
 ## 古筝
 - [ ] 练琴
+	- 2023-11-19-Sun 一次
 ## 围棋
 ### 本周内容：
 1. 围空，子的高度和宽度。
