--- a/src/site/notes/notes/2023-11-20-Mon校外.md
+++ b/src/site/notes/notes/2023-11-20-Mon校外.md
@@ -20,10 +20,15 @@
 
 - [ ] 3活动用书P49，3，4；P50，5，6；P51；P52，9；
 - [ ] 4：绘本可以根据自己时间自行选择RAZ每天打卡的内容[Rose]
+	- 2023-11-22-Wed 一条
 ## 乐读
 - [ ] 加油站
 ## 书法
-
+今天复习了之前学习的“无、光、巴、水、朵”五个字，根据作业情况重点讲解了朵字。
+学习了“竖提、反捺、相向点”这三个新笔画，学习了汉字“氏、食、关”三个对应的汉字。
+### 作业：
+- [ ] “氏、食、关 ”3个字各两行
+- [ ] 尝试写“民、贡、兑”3个汉字各一行
 ## 古筝
 - [ ] 练琴
 	- 2023-11-22-Wed 一次
