--- a/src/site/notes/notes/2023-11-20-Mon校外.md
+++ b/src/site/notes/notes/2023-11-20-Mon校外.md
@@ -12,26 +12,43 @@
 作业
 - [ ] 1：熟读以上词汇，每天每个写两遍[Rose]钉钉打卡5天
 	- 2023-11-22-Wed 完成一次
+	- 2023-11-23-Thu 完成一次
+	- 2023-11-24-Fri 完成一次
+	- 2023-11-25-Sat 完成一次
+	- 2023-11-26-Sun 完成一次
+	- 2023-11-27-Mon 完成一次
 - [ ] 2：老师发的讲义文件，要求先听后跟读，或者边听边指读。钉钉打卡5天
 	1. pupP48-1,听单pup3-02
 		- 2023-11-22-Wed 完成一次
 	1. pupP50-5听单pup3-07
-	2. pupP53-11,听单pup3-14
+		- 2023-11-23-Thu 完成一次
+	1. pupP53-11,听单pup3-14
+		- 2023-11-25-Sat 完成一次
 
 - [ ] 3活动用书P49，3，4；P50，5，6；P51；P52，9；
+	- P50-5，听单act：3-09
+		- 2023-11-26-Sun完成
 - [ ] 4：绘本可以根据自己时间自行选择RAZ每天打卡的内容[Rose]
 	- 2023-11-22-Wed 一条
+	- 2023-11-23-Thu 一条
+	- 2023-11-24-Fri 一条
+	- 2023-11-26-Sun 一条
+	- 2023-11-27-Mon 一条
 ## 乐读
 - [ ] 加油站
+	- 2023-11-26-Sun完成
 ## 书法
 今天复习了之前学习的“无、光、巴、水、朵”五个字，根据作业情况重点讲解了朵字。
 学习了“竖提、反捺、相向点”这三个新笔画，学习了汉字“氏、食、关”三个对应的汉字。
 ### 作业：
-- [ ] “氏、食、关 ”3个字各两行
-- [ ] 尝试写“民、贡、兑”3个汉字各一行
+- [x] “氏、食、关 ”3个字各两行
+- [x] 尝试写“民、贡、兑”3个汉字各一行
+- 2023-11-27-Mon全部完成
 ## 古筝
 - [ ] 练琴
 	- 2023-11-22-Wed 一次
+	- 2023-11-25-Sat 一次
+	- 2023-11-26-Sun 一次
 ## 围棋
 ### 本周内容： 
 1. 围空
