--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -49,7 +49,7 @@
 You can do it!
 { #8eadcc}
 
-- [ ] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]
 - [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-26]  [completion:: 2023-11-27]
 - [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-25]  [completion:: 2023-11-26]
 - [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-24]  [completion:: 2023-11-25]
