--- a/src/site/notes/notes/202310311910校内任务.md
+++ b/src/site/notes/notes/202310311910校内任务.md
@@ -49,19 +49,20 @@
 You can do it!
 { #8eadcc}
 
+
 - [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-26]  [completion:: 2023-11-27]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-25]  [completion:: 2023-11-26]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-24]  [completion:: 2023-11-25]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-23]  [completion:: 2023-11-24]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-18]  [completion:: 2023-11-23]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-16]  [completion:: 2023-11-18]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-15]  [completion:: 2023-11-16]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-10]  [completion:: 2023-11-15]
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-06]  [completion:: 2023-11-10]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-26]  [completion:: 2023-11-27]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-25]  [completion:: 2023-11-26]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-24]  [completion:: 2023-11-25]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-23]  [completion:: 2023-11-24]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-18]  [completion:: 2023-11-23]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-16]  [completion:: 2023-11-18]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-15]  [completion:: 2023-11-16]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-10]  [completion:: 2023-11-15]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-06]  [completion:: 2023-11-10]
 { #2b684d}
 
-- [x] #任务 <font color=yellow>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-05]  [completion:: 2023-11-06]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-05]  [completion:: 2023-11-06]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-04]  [completion:: 2023-11-05]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-04]
 - [x] #任务 每日打卡  [repeat:: every day]  [created:: 2023-11-02]  [completion:: 2023-11-02]
