--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -19,7 +19,7 @@
 > [!info] 持续任务
 ### 英语
 
-<div class="transclusion internal-embed is-loaded"><a class="markdown-embed-link" href="/notes/202310311910/#2023-11-02-thu" aria-label="Open link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon lucide-link"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a><div class="markdown-embed">
+<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
 
 
 
