--- a/src/site/notes/notes/校外列表.md
+++ b/src/site/notes/notes/校外列表.md
@@ -4,3 +4,4 @@
 
 # 校外任务
 - [第48周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校外/)
+- [第47周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-20-Mon校外/)
