--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -32,7 +32,8 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-28]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]  [completion:: 2023-11-28]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-26]  [completion:: 2023-11-27]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-25]  [completion:: 2023-11-26]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-24]  [completion:: 2023-11-25]
