--- a/src/site/notes/notes/2023-11-27-Mon校外.md
+++ b/src/site/notes/notes/2023-11-27-Mon校外.md
@@ -5,7 +5,9 @@
 
 # 第48周校外
 ## 英语
-
+### 自修
+- 2023-11-30-Thu raz-i dream
+- 2023-11-30-Thu 单词听写一遍
 ---
 ## 乐读
 - [ ] 加油站
@@ -16,6 +18,7 @@
 ## 古筝
 - [ ] 练琴
 	- 2023-11-27-Mon 一次
+	- 2023-11-29-Tue0一次
 ---
 ## 围棋
 ### 本周内容：
@@ -23,4 +26,6 @@
 2、星位点三三。
 ### 作业：
 - [ ] 题目
+	- 2023-11-30-Thu 五六道
 - [ ] 每周对局。
+	- 2023-11-30-Thu 一局
