--- a/src/site/notes/notes/2023-11-27-Mon校外.md
+++ b/src/site/notes/notes/2023-11-27-Mon校外.md
@@ -18,7 +18,7 @@
 ## 古筝
 - [ ] 练琴
 	- 2023-11-27-Mon 一次
-	- 2023-11-29-Tue0一次
+	- 2023-11-29-Tue 一次
 ---
 ## 围棋
 ### 本周内容：
@@ -29,3 +29,4 @@
 	- 2023-11-30-Thu 五六道
 - [ ] 每周对局。
 	- 2023-11-30-Thu 一局
+	- 2023-11-30-Thu 我俩实战一局
