--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -5,8 +5,8 @@
 
 # 第48周校内
 > [!info] 本期任务
-### 英语
-#### 2023-11-27-Mon通知
+## 英语
+### 2023-11-27-Mon通知
 2023.11.27（周一）英语学习建议:
 1. 跟读11.27周末学习建议，注意每一种水果的数量！（示范视频已上传至班小二，自愿朗读上传班小二）
 2. 跟读Unit 6歌谣，注意模仿语音语调（自愿上传班小二）
@@ -15,9 +15,17 @@
 未到校的小朋友可以点击下列视频，一起走进水果世界吧！
 孩子们有任何问题可以联系我，加油加油[Sun][Sun][Sun]
 - 2023-11-27-Mon 全部完成
+## 语文
+### 2023-11-30-Thu通知
+@所有人 
+今日语文没有新授课，语文学科学任务如下：
+1️⃣完成以上五单元看拼音写词语练习。
+2️⃣巩固第五单元需要背诵的课文。
+3️⃣学有余力的同学可以自主复习已学过的单元字词。
+- 2023-11-30-Thu 全部完成，回字没写出来
 
 > [!info] 持续任务
-### 英语
+## 英语
 
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
 
