--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -9,12 +9,23 @@
 ### 2023-11-27-Mon通知
 2023.11.27（周一）英语学习建议:
 1. 跟读11.27周末学习建议，注意每一种水果的数量！（示范视频已上传至班小二，自愿朗读上传班小二）
-2. 跟读Unit 6歌谣，注意模仿语音语调（自愿上传班小二）
-3. 坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤️
+1. 跟读Unit 6歌谣，注意模仿语音语调（自愿上传班小二）
+2. 坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤️
 
 未到校的小朋友可以点击下列视频，一起走进水果世界吧！
 孩子们有任何问题可以联系我，加油加油[Sun][Sun][Sun]
 - 2023-11-27-Mon 全部完成
+### 2023-12-01-Fri 通知
+12.1周末英语学习建议
+1. 跟读12.1学习建议，注意每一种水果的数量！（示范视频已上传至班小二，自愿朗读上传班小二）
+	- 2023-12-02-Sat 完成
+1. 练习字母B和字母C的字母歌谣，朗读单已上传资源
+	- 2023-12-02-Sat 跟读一遍
+2.  坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤
+	- 听单sch
+
+没有到校的同学可以点击下列视频，走进水果的世界吧[Sun]
+孩子们加油[GoForIt]
 ## 语文
 ### 2023-11-30-Thu通知
 @所有人 
@@ -40,7 +51,9 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-30]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-02]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-01]  [completion:: 2023-12-02]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-30]  [completion:: 2023-12-01]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-29]  [completion:: 2023-11-30]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-28]  [completion:: 2023-11-29]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-27]  [completion:: 2023-11-28]
