--- a/src/site/notes/notes/2023-11-27-Mon校外.md
+++ b/src/site/notes/notes/2023-11-27-Mon校外.md
@@ -8,9 +8,11 @@
 ### 自修
 - 2023-11-30-Thu raz-i dream
 - 2023-11-30-Thu 单词听写一遍
+- 2023-12-01-Fri raz-i like 
 ---
 ## 乐读
 - [ ] 加油站
+	- 2023-12-02-Sat 完成本周
 ---
 ## 书法
 
