--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -4,7 +4,7 @@
 
 
 # 第48周校内
-> [!info] 本期任务
+> [! abstract] 本期任务
 ## 英语
 ### 2023-11-27-Mon通知
 2023.11.27（周一）英语学习建议:
@@ -23,6 +23,7 @@
 	- 2023-12-02-Sat 跟读一遍
 2.  坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤
 	- 听单sch
+	- 2023-12-03-Sun 分三天都做完了
 
 没有到校的同学可以点击下列视频，走进水果的世界吧[Sun]
 孩子们加油[GoForIt]
@@ -35,7 +36,7 @@
 3️⃣学有余力的同学可以自主复习已学过的单元字词。
 - 2023-11-30-Thu 全部完成，回字没写出来
 
-> [!info] 持续任务
+> [! abstract] 持续任务
 ## 英语
 
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
@@ -51,7 +52,10 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-02]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-05]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-04]  [completion:: 2023-12-05]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-03]  [completion:: 2023-12-04]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-02]  [completion:: 2023-12-03]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-01]  [completion:: 2023-12-02]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-30]  [completion:: 2023-12-01]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-11-29]  [completion:: 2023-11-30]
