--- a/src/site/notes/notes/校内列表.md
+++ b/src/site/notes/notes/校内列表.md
@@ -3,4 +3,5 @@
 ---
 
 # 校内任务
+- [第49周校内](https://vocal-marigold-a2107c.netlify.app/notes/Probar/)
 - [第48周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校内/)
