--- a/src/site/notes/notes/校外列表.md
+++ b/src/site/notes/notes/校外列表.md
@@ -3,5 +3,6 @@
 ---
 
 # 校外任务
+- [第49周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-04-Mon校外/)
 - [第48周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校外/)
 - [第47周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-20-Mon校外/)
