--- a/src/site/notes/notes/2023-12-04-Mon校外.md
+++ b/src/site/notes/notes/2023-12-04-Mon校外.md
@@ -11,7 +11,13 @@
 宝贝们，温馨提示
 - [ ] 本周我们学习了我的衣服，词汇共有6个，T-shirt(T恤衫)，skirt(短裙)，socks(袜子)，shoes(鞋)jacket(夹克衫),trousers(裤子)，下周考察。
 - [ ] 2；讲义指读1，5，11部分，先听后跟读。
+	- 讲义1，听单pup，3-15
+	- 讲义5，听单pup，3-21
+	- 讲义11，听单pup，3-31
 - [ ] 3：活动用书完成P55，3；P56，5；P57；P58，9；P60，2；P61，3；P63，4；
+	- P55-3，听单act，3-20
+	- P56-5，听单act，3-23
+	- P57-7，听单act，3-28
 - [ ] 4：绘本自行挑选打卡。
 ---
 ## 乐读
