--- a/src/site/notes/notes/2023-12-04-Mon校内.md
+++ b/src/site/notes/notes/2023-12-04-Mon校内.md
@@ -13,6 +13,12 @@
 3. 坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤
 孩子们有任何问题可以联系我，加油加油[Sun][Sun][Sun]
 - 2023-12-04-Mon 完成
+### 2023-12-06-Wed 通知
+12.6英语学习建议：
+1. 跟读Unit 4-Unit 6单词，注意模仿语音语调（自愿朗读上传班小二）
+2. 坚持听读，推荐绘本已添加至班小二资源，期待大家的蜕变❤
+孩子们加油[Sun]有任何问题可以随时联系我[Heart]
+- 2023-12-06-Wed 完成
 
 > [! abstract] 持续任务
 
