--- a/src/site/notes/notes/2023-12-04-Mon校外.md
+++ b/src/site/notes/notes/2023-12-04-Mon校外.md
@@ -5,11 +5,12 @@
 
 # 第49周校外
 ## 英语
-- [ ] 自修
+- [x] 自修 [completion:: 2023-12-06]
 	- 2023-12-05-Tue raz一则
 
 宝贝们，温馨提示
 - [ ] 本周我们学习了我的衣服，词汇共有6个，T-shirt(T恤衫)，skirt(短裙)，socks(袜子)，shoes(鞋)jacket(夹克衫),trousers(裤子)，下周考察。
+	- 2023-12-06-Wed 一次
 - [ ] 2；讲义指读1，5，11部分，先听后跟读。
 	- 讲义1，听单pup，3-15
 	- 讲义5，听单pup，3-21
@@ -19,16 +20,22 @@
 	- P56-5，听单act，3-23
 	- P57-7，听单act，3-28
 - [ ] 4：绘本自行挑选打卡。
+	- 2023-12-06-Wed 一则
 ---
 ## 乐读
 - [ ] 加油站
 ---
 ## 书法
+今天复习了之前学习的“氏、食、关、民、贡、兑”六个字。
+学习了“斜勾、卧勾”这两个新笔画，学习了汉字“我、成、心、必”四个对应的汉字。
+作业：
+- [ ] “我、成、心、必 ”4个字各两行
 
 ---
 ## 古筝
 - [ ] 练琴
 	- 2023-12-04-Mon 一次
+	- 2023-12-06-Wed 一次
 ---
 ## 围棋
 ### 自修
