--- a/src/site/notes/notes/2023-11-27-Mon校内.md
+++ b/src/site/notes/notes/2023-11-27-Mon校内.md
@@ -52,7 +52,9 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-05]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-07]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-06]  [completion:: 2023-12-07]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-05]  [completion:: 2023-12-06]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-04]  [completion:: 2023-12-05]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-03]  [completion:: 2023-12-04]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-02]  [completion:: 2023-12-03]
