--- a/src/site/notes/notes/2023-12-04-Mon校外.md
+++ b/src/site/notes/notes/2023-12-04-Mon校外.md
@@ -13,6 +13,7 @@
 	- 2023-12-06-Wed 一次
 - [ ] 2；讲义指读1，5，11部分，先听后跟读。
 	- 讲义1，听单pup，3-15
+		- 2023-12-07-Thu 完成
 	- 讲义5，听单pup，3-21
 	- 讲义11，听单pup，3-31
 - [ ] 3：活动用书完成P55，3；P56，5；P57；P58，9；P60，2；P61，3；P63，4；
@@ -21,7 +22,6 @@
 	- P57-7，听单act，3-28
 - [ ] 4：绘本自行挑选打卡。
 	- 2023-12-06-Wed 一则
-	- 2023-12-07-Thu 一则
 ---
 ## 乐读
 - [ ] 加油站
