--- a/src/site/notes/notes/校内列表.md
+++ b/src/site/notes/notes/校内列表.md
@@ -3,5 +3,6 @@
 ---
 
 # 校内任务
+- [第50周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-11-Mon校内/)
 - [第49周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-04-Mon校内/)
 - [第48周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校内/)
