--- a/src/site/notes/notes/2023-12-11-Mon校外.md
+++ b/src/site/notes/notes/2023-12-11-Mon校外.md
@@ -5,9 +5,15 @@
 
 # 第50周校外
 ## 英语
-- [ ] 自修
+- [x] 自修
 	- 2023-12-13-Wed raz一则
 	- 2023-12-13-Wed 单词四遍，piano, guitar, ride, basketball, fish,swim, tennis, sing, football, bike 
+
+宝贝们温馨提示
+- [ ] 本周我们学习了fun time,了解到了比较有趣的活动，下周考察大家fish(钓鱼)，sing(唱歌)swim(游泳)play football(踢足球)play basketball(打篮球)play tennis(打网球)play the piano(弹钢琴)play the guitar(弹吉他) ride a bike(骑自行车)，每天读一读，写一写，下周考察
+- [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
+- [ ] 3：同步训练P64，1，2；65，4；P66 5,6;P67,7;P68,9
+- [ ] 4:绘本自行选择[Rose]
 ---
 ## 乐读
 - [ ] 加油站
