--- a/src/site/notes/notes/2023-12-11-Mon校内.md
+++ b/src/site/notes/notes/2023-12-11-Mon校内.md
@@ -10,12 +10,18 @@
 - [ ] 同步练习册40～46页作完
 	- 2023-12-12-Tue 一列
 	- 2023-12-13-Wed 两列
+	- 2023-12-14-Thu 三列
 ## 英语
 ### 2023-12-13-Wed 通知
 - [ ] 根据自身情况，复习第五单元歌谣，对话和故事
 ## 语文
 ### 2023-12-13-Wed 通知
 - [ ] 语文：选择一个有教育意义的故事，自己练习，讲给你的家人听，返校后在班里进行交流。
+### 2023-12-14-Thu 通知
+@所有人 
+[Sun]语文学科温馨提示：
+- [ ] ①复习背诵古诗大比拼的内容。
+- [ ] ②阅读课外书30分钟。
 
 > [! abstract] 持续任务
 
@@ -34,7 +40,8 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-13]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-14]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-13]  [completion:: 2023-12-14]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-07]  [completion:: 2023-12-13]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-06]  [completion:: 2023-12-07]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-05]  [completion:: 2023-12-06]
