--- a/src/site/notes/notes/2023-12-11-Mon校内.md
+++ b/src/site/notes/notes/2023-12-11-Mon校内.md
@@ -11,6 +11,7 @@
 	- 2023-12-12-Tue 一列
 	- 2023-12-13-Wed 两列
 	- 2023-12-14-Thu 三列
+	- 2023-12-15-Fri 一列
 ## 英语
 ### 2023-12-13-Wed 通知
 - [ ] 根据自身情况，复习第五单元歌谣，对话和故事
@@ -40,7 +41,8 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-14]
+- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-15]
+- [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-14]  [completion:: 2023-12-15]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-13]  [completion:: 2023-12-14]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-07]  [completion:: 2023-12-13]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-06]  [completion:: 2023-12-07]
