--- a/src/site/notes/notes/2023-12-11-Mon校外.md
+++ b/src/site/notes/notes/2023-12-11-Mon校外.md
@@ -12,6 +12,7 @@
 宝贝们温馨提示
 - [ ] 本周我们学习了fun time,了解到了比较有趣的活动，下周考察大家fish(钓鱼)，sing(唱歌)swim(游泳)play football(踢足球)play basketball(打篮球)play tennis(打网球)play the piano(弹钢琴)play the guitar(弹吉他) ride a bike(骑自行车)，每天读一读，写一写，下周考察
 	- 2023-12-14-Thu 考一遍
+	- 2023-12-15-Fri 一遍
 - [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
 	- 讲义1，3-38
 		- 2023-12-14-Thu 完成
@@ -24,6 +25,7 @@
 	- P66-5,3-46
 - [ ] 4:绘本自行选择[Rose]
 	- 2023-12-14-Thu 一则
+	- 2023-12-15-Fri 一则
 ---
 ## 乐读
 - [ ] 加油站
