--- a/src/site/notes/notes/2023-12-11-Mon校外.md
+++ b/src/site/notes/notes/2023-12-11-Mon校外.md
@@ -23,19 +23,23 @@
 - [ ] 3：同步训练P64，1，2；65，4；P66 5,6;P67,7;P68,9
 	- P64-1,3-40
 	- P66-5,3-46
+	- 2023-12-16-Sat 全部完成
 - [ ] 4:绘本自行选择[Rose]
 	- 2023-12-14-Thu 一则
 	- 2023-12-15-Fri 一则
 ---
 ## 乐读
-- [ ] 加油站
+- [x] 加油站
+	- 2023-12-16-Sat 完成本周
 ---
 ## 书法
+本周大雪停课一次
 
 ---
 ## 古筝
 - [ ] 练琴
 	- 2023-12-11-Mon 一次
+	- 2023-12-16-Sat 一次
 ---
 ## 围棋
 - [ ] 练习
