--- a/src/site/notes/notes/2023-12-11-Mon校内.md
+++ b/src/site/notes/notes/2023-12-11-Mon校内.md
@@ -12,18 +12,21 @@
 	- 2023-12-13-Wed 两列
 	- 2023-12-14-Thu 三列
 	- 2023-12-15-Fri 一列
+	- 2023-12-17-Sun两列
 ## 英语
 ### 2023-12-13-Wed 通知
-- [ ] 根据自身情况，复习第五单元歌谣，对话和故事
+- [x] 根据自身情况，复习第五单元歌谣，对话和故事
 ## 语文
 ### 2023-12-13-Wed 通知
-- [ ] 语文：选择一个有教育意义的故事，自己练习，讲给你的家人听，返校后在班里进行交流。
+- [x] 语文：选择一个有教育意义的故事，自己练习，讲给你的家人听，返校后在班里进行交流。
+	- 2023-12-17-Sun 准备凿壁偷光
 ### 2023-12-14-Thu 通知
 @所有人 
 [Sun]语文学科温馨提示：
 - [ ] ①复习背诵古诗大比拼的内容。
-- [ ] ②阅读课外书30分钟。
+- [x] ②阅读课外书30分钟。
 - 2023-12-16-Sat 背诗
+- 2023-12-17-Sun背诗
 
 > [! abstract] 持续任务
 
