--- a/src/site/notes/notes/2023-12-11-Mon校外.md
+++ b/src/site/notes/notes/2023-12-11-Mon校外.md
@@ -48,7 +48,10 @@
 - [ ] 练琴
 	- 2023-12-11-Mon 一次
 	- 2023-12-16-Sat 一次
+	- 2023-12-17-Sun一次
 ---
 ## 围棋
 - [ ] 练习
+	- 2023-12-17-Sun一题
 - [ ] 对局
+	- 2023-12-17-Sun两局
