--- a/src/site/notes/notes/校内列表.md
+++ b/src/site/notes/notes/校内列表.md
@@ -3,6 +3,7 @@
 ---
 
 # 校内任务
+- [第51周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-19-Tue校内/)
 - [第50周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-11-Mon校内/)
 - [第49周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-04-Mon校内/)
 - [第48周校内](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校内/)
