--- a/src/site/notes/notes/校外列表.md
+++ b/src/site/notes/notes/校外列表.md
@@ -3,6 +3,7 @@
 ---
 
 # 校外任务
+- [第51周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-19-Tue校外/)
 - [第50周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-11-Mon校外/)
 - [第49周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-12-04-Mon校外/)
 - [第48周校外](https://vocal-marigold-a2107c.netlify.app/notes/2023-11-27-Mon校外/)
