--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -9,9 +9,13 @@
 - [ ] 本周我们学习了At the funfair,了解到了比较有趣的交通工具，motobike(摩托车)bus(公交车)，plane(飞机)helicopter(直升机)boat(船) lorry(大货车)每天读一读，写一写，下周考察。了解动作fly(飞)，drive(开车)ride(骑)
 	- 2023-12-21-Thu 写
 - [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
-	- 1，4-02
+	- 讲义1，pup-4-02
 		- 2023-12-21-Thu完成
+	- 讲义5，pup-4-07
+	- 讲义11，pup-4-16
 - [ ] 3：同步训练 P70，1；P71，3，4；P72，5；P73；P74，9；P76，1，2；
+	- P72-5，act-4-09
+	- P73-7，act-4-12
 - [ ] 4：句型：根据书上P71，4图，练习句型，造5个问答小句子在练习本上
 	Is the red car in the ?
 	Yes,it is./No,it isn't.
