--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -9,6 +9,7 @@
 - [ ] 本周我们学习了At the funfair,了解到了比较有趣的交通工具，motobike(摩托车)bus(公交车)，plane(飞机)helicopter(直升机)boat(船) lorry(大货车)每天读一读，写一写，下周考察。了解动作fly(飞)，drive(开车)ride(骑)
 	- 2023-12-21-Thu 写
 	- 2023-12-22-Fri 听写加复习
+	- 2023-12-23-Sat练习
 - [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
 	- [x] 讲义1，pup-4-02
 		- 2023-12-21-Thu完成
@@ -47,4 +48,6 @@
 2、10级，枷吃。
 ### 作业：
 - [ ] 10级题目
+	- 2023-12-23-Sat 门吃几道题
 - [ ] 每周对局。
+	- 2023-12-23-Sat 一局
