--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -18,6 +18,7 @@
 - [ ] 3：同步训练 P70，1；P71，3，4；P72，5；P73；P74，9；P76，1，2；
 	- P72-5，act-4-09
 	- P73-7，act-4-12
+	- 2023-12-24-Sun全部完成
 - [ ] 4：句型：根据书上P71，4图，练习句型，造5个问答小句子在练习本上
 	Is the red car in the ?
 	Yes,it is./No,it isn't.
@@ -41,6 +42,7 @@
 ---
 ## 古筝
 - [ ] 练琴
+	- 2023-12-23-Sat
 ---
 ## 围棋
 ### 本周内容：
