--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -15,7 +15,7 @@
 		- 2023-12-21-Thu完成
 	- [ ] 讲义5，pup-4-07
 	- [ ] 讲义11，pup-4-16
-- [ ] 3：同步训练 P70，1；P71，3，4；P72，5；P73；P74，9；P76，1，2；
+- [x] 3：同步训练 P70，1；P71，3，4；P72，5；P73；P74，9；P76，1，2；
 	- P72-5，act-4-09
 	- P73-7，act-4-12
 	- 2023-12-24-Sun全部完成
@@ -24,6 +24,7 @@
 	Yes,it is./No,it isn't.
 - [ ] 5：根据书上P74，10图，描述6幅图，比如图1：Suzy is walking.
 - [ ] 自修绘本
+	- 2023-12-24-Sun 一则
 	
 ---
 ## 高思
