--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -10,19 +10,23 @@
 	- 2023-12-21-Thu 写
 	- 2023-12-22-Fri 听写加复习
 	- 2023-12-23-Sat练习
-- [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
+	- 2023-12-24-Sun练习
+- [x] 2：讲义老师发的1，2,5，11要求同学根据录音指读
 	- [x] 讲义1，pup-4-02
 		- 2023-12-21-Thu完成
-	- [ ] 讲义5，pup-4-07
-	- [ ] 讲义11，pup-4-16
+	- [x] 讲义5，pup-4-07
+	- [x] 讲义11，pup-4-16
+	- 2023-12-24-Sun全完
 - [x] 3：同步训练 P70，1；P71，3，4；P72，5；P73；P74，9；P76，1，2；
 	- P72-5，act-4-09
 	- P73-7，act-4-12
 	- 2023-12-24-Sun全部完成
-- [ ] 4：句型：根据书上P71，4图，练习句型，造5个问答小句子在练习本上
+- [x] 4：句型：根据书上P71，4图，练习句型，造5个问答小句子在练习本上
 	Is the red car in the ?
 	Yes,it is./No,it isn't.
-- [ ] 5：根据书上P74，10图，描述6幅图，比如图1：Suzy is walking.
+	- 2023-12-24-Sun完成
+- [x] 5：根据书上P74，10图，描述6幅图，比如图1：Suzy is walking.
+	- 2023-12-24-Sun完成
 - [ ] 自修绘本
 	- 2023-12-24-Sun 一则
 	
