--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -43,8 +43,9 @@
 今天复习了之前学习的“我、成、心、必”四个字。
 学习了“撇点、横撇”这两个新笔画，学习了汉字“女、妥、夕、久”四个对应的汉字。
 作业：
-- [ ] “女、妥、夕、久 ”4个字各两行
-- [ ] sorry，是 友、久、歹、女、妥
+- [x] “女、妥、夕、久 ”4个字各两行
+- [x] sorry，是 友、久、歹、女、妥
+	- 2023-12-24-Sun完成
 
 ---
 ## 古筝
