--- a/src/site/notes/notes/2023-12-19-Tue校外.md
+++ b/src/site/notes/notes/2023-12-19-Tue校外.md
@@ -6,11 +6,12 @@
 # 第51周校外
 ## 英语
 宝贝们温馨提示
-- [ ] 本周我们学习了At the funfair,了解到了比较有趣的交通工具，motobike(摩托车)bus(公交车)，plane(飞机)helicopter(直升机)boat(船) lorry(大货车)每天读一读，写一写，下周考察。了解动作fly(飞)，drive(开车)ride(骑)
+- [x] 本周我们学习了At the funfair,了解到了比较有趣的交通工具，motobike(摩托车)bus(公交车)，plane(飞机)helicopter(直升机)boat(船) lorry(大货车)每天读一读，写一写，下周考察。了解动作fly(飞)，drive(开车)ride(骑)
 	- 2023-12-21-Thu 写
 	- 2023-12-22-Fri 听写加复习
 	- 2023-12-23-Sat练习
 	- 2023-12-24-Sun练习
+	- 2023-12-25-Mon练习
 - [x] 2：讲义老师发的1，2,5，11要求同学根据录音指读
 	- [x] 讲义1，pup-4-02
 		- 2023-12-21-Thu完成
@@ -29,6 +30,7 @@
 	- 2023-12-24-Sun完成
 - [ ] 自修绘本
 	- 2023-12-24-Sun 一则
+	- 2023-12-25-Mon 一则
 	
 ---
 ## 高思
@@ -36,7 +38,7 @@
 
 ---
 ## 乐读
-- [ ] 加油站
+- [x] 加油站
 	- 2023-12-24-Sun完成
 ---
 ## 书法
