--- a/src/site/notes/notes/2023-12-25-Mon校外.md
+++ b/src/site/notes/notes/2023-12-25-Mon校外.md
@@ -8,7 +8,13 @@
 宝贝们温馨提示
 - [ ] 本周我们学习了My house,了解到家里各个房间的说法，bedroom,living room,kitchen,hall,bathroom,dining room
 - [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
+	- 讲义1，pup-4-21
+	- 讲义2，pup-4-22
+	- 讲义5，pup-4-26
+	- 讲义11，pup-4-33
 - [ ] 3：同步训练 P78，1；P79，2,3；P80，4,5；P81；P82,8
+	- P78-1,act-4-23
+	- P80-4,act-4-28
 - [ ] 4：句型：根据书上P81，7图，听歌练习句型，5个小句子在练习本上.Grandpa is eating fish in the dining room.
 - [ ] 自修绘本
 ---
