--- a/src/site/notes/notes/2023-12-25-Mon校内.md
+++ b/src/site/notes/notes/2023-12-25-Mon校内.md
@@ -6,6 +6,14 @@
 # 第52周校内
 > [! abstract] 本期任务
 
+## 数学
+### 2023-12-29-Fri通知
+@所有人 
+大家好:
+        鉴于孩子们对自己影子为什么一会儿长一会儿短非常感兴趣，所以特意设计了此次数学实践活动——观察自己的影子长短变化情况。
+        在开始研究之前可以初步思考一下影子的长短可能会和什么有关系，然后确定一个观察点，做好标记，观察和记录不同时间站在观察点上影子的长度。实践过后也可以总结反思一下此次研究的收获，为下一次的研究积累经验。
+ - [ ] 本次研究需上交研究报告，可上传电子版，也可打印记录后上交班小二，电子文档已上传，大家可以自行下载打印[Rose]
+
 ---
 > [! abstract] 持续任务
 
@@ -43,7 +51,8 @@
 为了培养孩子学习主动的好习惯；从今天起，你可以坚持用语音或视频记录自己的朗读内容（朗读内容以当天学习建议内容为主，加上自主选择的绘本）
 坚持下去，一定会看到自己的蜕变！
 You can do it! 
-- [ ] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-26]
+- [ ]  <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-26] [[notes/英语打卡\|英语打卡]]
+
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-25]  [completion:: 2023-12-26]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-24]  [completion:: 2023-12-25]
 - [x] #任务 <font color=red>每日打卡校内英语</font>  [repeat:: every day]  [created:: 2023-12-23]  [completion:: 2023-12-24]
