--- a/src/site/notes/notes/2023-12-25-Mon校外.md
+++ b/src/site/notes/notes/2023-12-25-Mon校外.md
@@ -26,6 +26,9 @@
 - [ ] 加油站
 ---
 ## 书法
+今天复习了之前学习的“友、久、歹、女、妥”五个字。
+学习了“横钩”这个新笔画，复习了“捺、平捺”两个笔画，学习了汉字“安、买、冗、予、皮”五个对应的汉字。
+- [ ] 作业：“安、买、冗、予、皮 ”5个字各两行
 
 ---
 ## 古筝
