--- a/src/site/notes/notes/2023-12-25-Mon校内.md
+++ b/src/site/notes/notes/2023-12-25-Mon校内.md
@@ -21,9 +21,9 @@
 亲爱的大朋友们：
 欢愉的元旦假期来临，提前祝各位宝贝们新年快乐！祝各位大朋友们2024年龙腾虎跃[Party]
 在休息娱乐之余，娃娃们可以自愿完成假期学习建议：
-- [ ] 1.朗读第二、第三单元朗读单（纸质版已下发），根据自己的朗读情况查漏补缺
-- [ ] 2.听、读绘本Cars
-- [ ] 3.利用字母歌谣M，L磨耳朵
+- [x] 1.朗读第二、第三单元朗读单（纸质版已下发），根据自己的朗读情况查漏补缺
+- [x] 2.听、读绘本Cars
+- [x] 3.利用字母歌谣M，L磨耳朵
 孩子们加油[Sun]
 
 ---
