--- a/src/site/notes/notes/2023-12-25-Mon校内.md
+++ b/src/site/notes/notes/2023-12-25-Mon校内.md
@@ -12,7 +12,7 @@
 大家好:
         鉴于孩子们对自己影子为什么一会儿长一会儿短非常感兴趣，所以特意设计了此次数学实践活动——观察自己的影子长短变化情况。
         在开始研究之前可以初步思考一下影子的长短可能会和什么有关系，然后确定一个观察点，做好标记，观察和记录不同时间站在观察点上影子的长度。实践过后也可以总结反思一下此次研究的收获，为下一次的研究积累经验。
- - [ ] 本次研究需上交研究报告，可上传电子版，也可打印记录后上交班小二，电子文档已上传，大家可以自行下载打印[Rose]
+ - [x] 本次研究需上交研究报告，可上传电子版，也可打印记录后上交班小二，电子文档已上传，大家可以自行下载打印[Rose] [completion:: 2023-12-30]
 	- 保存位置：smb://rocky@DEBIAN/share/personalfiles/%E5%A5%87%E5%A5%87/%E6%A0%A1%E5%86%85%E4%BB%BB%E5%8A%A1/20231230%E4%B8%80%E5%B9%B4%E7%BA%A7%E6%95%B0%E5%AD%A6%E5%AE%9E%E8%B7%B5%E6%B4%BB%E5%8A%A8_%E5%BD%B1%E5%AD%90%E7%9A%84%E9%95%BF%E7%9F%AD.docx
 
 ---
@@ -21,9 +21,9 @@
 亲爱的大朋友们：
 欢愉的元旦假期来临，提前祝各位宝贝们新年快乐！祝各位大朋友们2024年龙腾虎跃[Party]
 在休息娱乐之余，娃娃们可以自愿完成假期学习建议：
-- [x] 1.朗读第二、第三单元朗读单（纸质版已下发），根据自己的朗读情况查漏补缺
-- [x] 2.听、读绘本Cars
-- [x] 3.利用字母歌谣M，L磨耳朵
+- [x] 1.朗读第二、第三单元朗读单（纸质版已下发），根据自己的朗读情况查漏补缺 [completion:: 2023-12-30]
+- [x] 2.听、读绘本Cars [completion:: 2023-12-30]
+- [x] 3.利用字母歌谣M，L磨耳朵 [completion:: 2023-12-30]
 孩子们加油[Sun]
 
 ---
