--- a/src/site/notes/notes/2023-12-25-Mon校外.md
+++ b/src/site/notes/notes/2023-12-25-Mon校外.md
@@ -7,11 +7,14 @@
 ## 英语
 宝贝们温馨提示
 - [ ] 本周我们学习了My house,了解到家里各个房间的说法，bedroom,living room,kitchen,hall,bathroom,dining room
+	- 2023-12-30 练习
+	- 2023-12-31-Sun练习
 - [ ] 2：讲义老师发的1，2,5，11要求同学根据录音指读
 	- 讲义1，pup-4-21
 		- 2023-12-29 完成
 	- 讲义2，pup-4-22
 	- 讲义5，pup-4-26
+		- 2023-12-31-Sun完成
 	- 讲义11，pup-4-33
 - [ ] 3：同步训练 P78，1；P79，2,3；P80，4,5；P81；P82,8
 	- P78-1,act-4-23
@@ -25,6 +28,7 @@
 ---
 ## 乐读
 - [ ] 加油站
+	- 2023-12-30完成
 ---
 ## 书法
 今天复习了之前学习的“友、久、歹、女、妥”五个字。
@@ -34,6 +38,7 @@
 ---
 ## 古筝
 - [ ] 练琴
+	- 2023-12-30-Sat 一次
 ---
 ## 围棋
 ### 本周内容：
