--- a/src/site/notes/notes/2024-01-01-Mon校内任务.md
+++ b/src/site/notes/notes/2024-01-01-Mon校内任务.md
@@ -5,22 +5,10 @@
 
 # 第01周校内
 > [! abstract] 本期任务
----
-> [! abstract] 持续任务
-
-
-<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
-
-
 
 ## 数学
-### 2023-12-11-Mon 奇奇反馈
-- [ ] 同步练习册40～46页作完
-	- 2023-12-12-Tue 一列
-	- 2023-12-13-Wed 两列
-	- 2023-12-14-Thu 三列
-	- 2023-12-15-Fri 一列
-	- 2023-12-17-Sun两列
-	- 2023-12-21-Thu两列
-
-</div></div>
+### 2024-01-02-Tue奇奇反馈
+- [ ] 同步练习册40-60页做完
+	- 2024-01-02-Tue两页
+---
+> [! abstract] 持续任务
