--- a/src/site/notes/notes/2024-01-01-Mon校外.md
+++ b/src/site/notes/notes/2024-01-01-Mon校外.md
@@ -41,9 +41,7 @@
 ## 高思
 - [ ] 自学
 
----
-## 乐读
-- [ ] 加油站
+
 ---
 ## 书法
 - [ ] 上周
@@ -55,7 +53,8 @@
 ## 书法
 今天复习了之前学习的“友、久、歹、女、妥”五个字。
 学习了“横钩”这个新笔画，复习了“捺、平捺”两个笔画，学习了汉字“安、买、冗、予、皮”五个对应的汉字。
-- [ ] 作业：“安、买、冗、予、皮 ”5个字各两行
+- [x] 作业：“安、买、冗、予、皮 ”5个字各两行
+	- 2024-01-02-Tue完成
 
 ---
 
@@ -64,5 +63,32 @@
 ---
 ## 古筝
 - [ ] 练琴
+	- 2024-01-02-Tue 一次
+
 ---
 ## 围棋
+- 上周内容
+	
+<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
+
+
+
+### 本周内容：
+1. 棋谱讲解
+2. 接触战，分断与连接。
+
+</div></div>
+
+	
+<div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
+
+
+
+### 作业：
+- [ ] 10级题目
+- [ ] 每周对局。
+
+</div></div>
+
+- [ ] 对局
+- [ ] 练习
