--- a/src/site/notes/notes/2024-01-01-Mon校外.md
+++ b/src/site/notes/notes/2024-01-01-Mon校外.md
@@ -9,6 +9,7 @@
 	- 2024-01-01-Mon最后一单元
 - [ ] 绘本
 	- 2024-01-01-Mon一则
+	- 2024-01-03-Wed一则
 - [ ] 最后一节课
 	
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
@@ -64,6 +65,7 @@
 ## 古筝
 - [ ] 练琴
 	- 2024-01-02-Tue 一次
+	- 2024-01-03-Wed一次
 
 ---
 ## 围棋
