--- a/src/site/notes/notes/2024-01-01-Mon校外.md
+++ b/src/site/notes/notes/2024-01-01-Mon校外.md
@@ -10,6 +10,8 @@
 - [ ] 绘本
 	- 2024-01-01-Mon一则
 	- 2024-01-03-Wed一则
+	- 2024-01-04-Thu一则
+	- 2024-01-05-Fri一则
 - [ ] 最后一节课
 	
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
@@ -66,6 +68,7 @@
 - [ ] 练琴
 	- 2024-01-02-Tue 一次
 	- 2024-01-03-Wed一次
+	- 2024-01-04-Thu 一次
 
 ---
 ## 围棋
