--- a/src/site/notes/notes/盘古身高几何.md
+++ b/src/site/notes/notes/盘古身高几何.md
@@ -64,3 +64,4 @@
 自地球表面向上，大气层延伸得很高，可到几千公里的高空。根据人造卫星探测资料的推算，在2000-3000公里的高空，地球大气密度便达到每立方厘米一个微观粒子这一数值，和星际空间的密度非常相近，这样2000-3000公里的高空可以大致看作是地球大气的上界。也即大约3000000米，盘古大约是其13倍。
 日地距离（Earth-Sun Distance）其最大值为15 210万千米（地球处于远日点）；最小值为14 710万千米（地球处于近日点）；平均值为14 960万千米；这就是一个天文单位，1976年国际天文学联合会把它确定为149597870千米，并从1984年起用。 按此距离计算，太阳光到达地球表面只需8分18秒。
 地球与月球的平均距离是384403.9千米。 月球与地球近地点的距离是36.3万千米，与地球远地点的距离是40.6万千米。 月球是距离地球最近的星球。 平常月亮距离地球大概是40多万公里，由于月球环绕地球运行是一个以一个轴心为主的椭圆形的轨道，因此，月球距离地球最远比最近时多5万公里。大概10个盘古可以够到月亮。
+地球的平均半径约6,371公里，也即6371000米，直径就是12742000米。盘古的身高差不多是其三倍，也就是三个地球叠起来的就度。传说中大地的厚度应该是盘古的一半，那也就是差不多相当于一个半地球。看来相较于传说，我们生活的地球变小了。
